--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, Helvetica;
     font-size: 18px;
@@ -5,27 +11,26 @@ body {
 
 h1 , h2{
     color: green;
-    
-
-}
+    }
 
 
 h1 {
     
     font-size: 40px;
-  
-}
+    margin-bottom: 20px;
+  }
 
 h2 {
    
     font-size: 25px;
-  
-}
+    margin-bottom: 10px;
+  }
 
 
 
 .main-text {
     text-align: justify;
+    margin-bottom: 20px;
 }
 
 .author-text {
