--- a/Style.css
+++ b/Style.css
@@ -3,6 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+    
+}
 
 body {
     font-family: Arial, Helvetica;
@@ -18,6 +24,7 @@ h1 {
     
     font-size: 40px;
     margin-bottom: 20px;
+    
   }
 
 h2 {
@@ -36,4 +43,30 @@ h2 {
 .author-text {
      font-size: 20px;
 
+}
+.Container {
+   width: 1140px;
+   margin-left: auto;
+   margin-right: auto;
+   margin-top: 20px;
+   
+}
+
+.blog-post {
+    background-color: violet;
+    width: 75%;
+    float: left;
+    padding-right: 30px;
+}
+.other-posts{
+    
+    width: 25%;
+    float: left;
+}
+.author-box{
+    background-color: yellow;
+    
+    padding-top: 20px;
+    border-top: 1px solid gray;
+    
 }
