--- a/Style.css
+++ b/Style.css
@@ -42,6 +42,9 @@ h2 {
 
 .author-text {
      font-size: 20px;
+     float: left;
+     margin-top: 30px;
+     margin-left: 10px;
 
 }
 .Container {
@@ -53,7 +56,7 @@ h2 {
 }
 
 .blog-post {
-    background-color: violet;
+    
     width: 75%;
     float: left;
     padding-right: 30px;
@@ -64,9 +67,23 @@ h2 {
     float: left;
 }
 .author-box{
-    background-color: yellow;
+   
     
     padding-top: 20px;
     border-top: 1px solid gray;
+    
+}
+.other {
+    margin-bottom: 40px ;
+}
+.author-box img {
+    height: 100px;
+    width: 100px ;
+    border-radius: 50%;
+    float: left;
+}
+.blog-post img {
+    height: 150px;
+    width: auto;
     
 }
